refactor(service): ♻️ 重构服务类依赖注入方式
将多个服务类中的字段注入方式从@Autowired改为构造函数注入，提高代码可测试性和可维护性。

主要包括ClusterRackService、QueueManagerService、ClusterRoleUserService等20多个服务类，使用final关键字标记依赖字段，并通过构造函数统一初始化。

同时优化了部分类的import顺序，移除无用导入。未涉及业务逻辑变更。